# Kubek

./: README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/kubek/: cube.py  game.py
tests/: test_cube.py  test_something.py
