[metadata]
name = kubek
description = 3D Rubiks cube
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    kubek
install_requires =
    ursina
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    hypothesis
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
kubek = py.typed

[flake8]
max-line-length = 160